图片预加载

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -206,11 +206,44 @@
 		'clock.png',
 		'clock12.png',
 		'musicoff.png',
-		'musicon.png'
+		'musicon.png',
+		'grass1.png',
+		'grass2.png'
 	],'images/');
-		// loader.loadImages([
-		//
-		// ],'hf')
+		loader.loadImages([
+		'spring/springPink.png',
+		'spring/springWhilte.png',
+		'spring/springLibGrass.png',
+		'spring/springRole1.png',
+		'spring/springRole2.png',
+		'spring/springRole3.png',
+		'spring/springZhang.png',
+		'spring/roleBack.png',
+		'summary/summerTree.png',
+		'summary/summerGrass.png',
+		'summary/summerCloud.png',
+		'summary/summerRole1.png',
+		'summary/summerRole2.png',
+		'summary/summerRole3.png',
+		'summary/summerRole4.png',
+		'summary/summerRole5.png',
+		'autumn/autumnTree.png',
+		'autumn/autumnGrass.png',
+		'autumn/autumnRole1.png',
+		'autumn/autumnRole2.png',
+		'autumn/autumnRole3.png',
+		'autumn/autumnRole4.png',
+		'autumn/autumnRole5.png',
+		'autumn/fails.png',
+		'autumn/Train.png',
+		'winter/bg.jpg',
+		'winter/winterSnow.png'
+		'winter/winterTree.png',
+		'winter/winterSport.png',
+		'winter/winterRole1.png',
+		'winter/winterRole2.png',
+		'winter/winterRole3.png'
+	],'hf/')
     loader.complete(function(){
 		    setTimeout(function(){
 		   		startAct();
