--- a/views/index.ejs
+++ b/views/index.ejs
@@ -219,6 +219,7 @@
 		'spring/springRole3.png',
 		'spring/springZhang.png',
 		'spring/roleBack.png',
+		'spring/bigGrass.png',
 		'summary/summerTree.png',
 		'summary/summerGrass.png',
 		'summary/summerCloud.png',
@@ -227,7 +228,6 @@
 		'summary/summerRole3.png',
 		'summary/summerRole4.png',
 		'summary/summerRole5.png',
-		'autumn/autumnTree.png',
 		'autumn/autumnGrass.png',
 		'autumn/autumnRole1.png',
 		'autumn/autumnRole2.png',
