--- a/views/index.ejs
+++ b/views/index.ejs
@@ -220,14 +220,14 @@
 		'spring/springZhang.png',
 		'spring/roleBack.png',
 		'spring/bigGrass.png',
-		'summary/summerTree.png',
-		'summary/summerGrass.png',
-		'summary/summerCloud.png',
-		'summary/summerRole1.png',
-		'summary/summerRole2.png',
-		'summary/summerRole3.png',
-		'summary/summerRole4.png',
-		'summary/summerRole5.png',
+		'summer/summerTree.png',
+		'summer/summerGrass.png',
+		'summer/summerCloud.png',
+		'summer/summerRole1.png',
+		'summer/summerRole2.png',
+		'summer/summerRole3.png',
+		'summer/summerRole4.png',
+		'summer/summerRole5.png',
 		'autumn/autumnGrass.png',
 		'autumn/autumnRole1.png',
 		'autumn/autumnRole2.png',
@@ -237,7 +237,7 @@
 		'autumn/fails.png',
 		'autumn/Train.png',
 		'winter/bg.jpg',
-		'winter/winterSnow.png'
+		'winter/winterSnow.png',
 		'winter/winterTree.png',
 		'winter/winterSport.png',
 		'winter/winterRole1.png',
