--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,13 +17,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <meta name="format-detection"content="telephone=no">
     <title>北区图书馆</title>
-	<link rel="stylesheet" type="text/css" href="stylesheets/animate.css">
-	<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/animate.min.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/main.min.css">
 	<link rel="stylesheet" href="stylesheets/master.css">
 
   	<!-- <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script> -->
 
-	<script src="javascripts/libs/jquery-3.2.1.min.js"></script>
+	<script src="javascripts/libs/Zepto-1.2.0.min.js"></script>
 	<script src="javascripts/libs/imagesLoader.min.js"></script>
     <script src="javascripts/libs/iscroll-probe.js"></script>
 
