--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,7 @@
   	<!-- <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script> -->
 
 	<script src="javascripts/libs/Zepto-1.2.0.min.js"></script>
+	<script src="javascripts/libs/fx.js" charset="utf-8"></script>
 	<script src="javascripts/libs/imagesLoader.min.js"></script>
     <script src="javascripts/libs/iscroll-probe.js"></script>
 
