--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <meta name="format-detection"content="telephone=no">
     <title>北区图书馆</title>
-	<link rel="stylesheet" type="text/css" href="stylesheets/animate.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/animate.min.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/main.min.css">
 	<link rel="stylesheet" href="stylesheets/master.css">
 
