--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,12 +122,12 @@
 				<!-- 变老逝去 -->
 				<!-- <div class="night2"></div> -->
 
-				<div class="text text1"><p>在这个一片蝉鸣的季节</p><p>我来到了这所学校</p></div>
-				<div class="text text2"><p><p>炎热的夏伴随这教学楼勤勉的求学身影</p><p>我度过了在这里的第一个季节</p></div>
-				<div class="text text3"><p>落叶的季节里</p><p>这里有香浓的咖啡味</p><p>还有舒适的音乐</p></div>
-				<div class="text text6"><p>寒冷的冬</p><p>有纷扬的雪花</p></div>
-				<div class="text text8"><p>曼妙的春天</p><p>我也依旧这样走过</p></div>
-				<div class="text text10"><p>却闻见了比花香更吸引我的味道</p><p>那是如醇酒般的思想与书写碰撞的香气</p></div>
+				<div class="text text1"><p>夏季的微风拂过我的脸颊</p><p>将我带到这所学校</p></div>
+				<div class="text text2"><p><p>灼热的空气也无法盖过教学楼中同学学习的热情</p><p>在点滴的收获中  我度过了这个季节</p></div>
+				<div class="text text3"><p>伴着动人的音乐</p><p>落叶似蝴蝶般飞舞</p><p>荡漾在充满列车的咖啡厅旁</p></div>
+				<div class="text text6"><p>在纷扬的雪花映衬下</p><p>田径场依旧能看到运动的身影</p></div>
+				<div class="text text8"><p>春天的花香</p><p>悸动着我的心房</p></div>
+				<div class="text text10"><p>比齐放的花朵更吸引人的</p><p>是那充满着诗意的、涌动着灵性、弥漫着芳香的知识海洋</p></div>
 			</div>
 		</div>
 		<div class="starfield" id="starfield2">
